tests/ui/server_send/error/has-expression-arguments.stderr
error: this attribute takes from one to three assign arguments

         = help: use `#[server_send(level=trace, name="Name", skip="a, b")]`

 --> tests/ui/server_send/error/has-expression-arguments.rs:4:15
  |
4 | #[server_send(trace, "B", skip(self))]
  |               ^^^^^
